--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "note2anki",
+	"name": "Note2Anki",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "This plugin allows you to convert your Obsidian notes into Anki flashcards.",
+	"author": "Andrew Garcia",
+	"isDesktopOnly": true
 }
