--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Note2Anki",
 	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "This plugin allows you to convert your Obsidian notes into Anki flashcards.",
+	"description": "Convert your Obsidian notes into Anki cards",
 	"author": "Andrew Garcia",
 	"isDesktopOnly": true
 }
