--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "note2anki",
+	"version": "0.1.0",
+	"description": "Convert your Obsidian notes into Anki cards",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/lodash": "^4.17.10",
