Update manifest.json description

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Note2Anki",
 	"version": "0.2.0",
 	"minAppVersion": "0.15.0",
-	"description": "Convert your Obsidian notes into Anki cards",
+	"description": "Convert your notes into Anki cards",
 	"author": "Andrew Garcia",
 	"isDesktopOnly": true
 }
